# french-exercises

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pipeline.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: issue_template.md  pull_request_template.md
.github/workflows/: ci-cd.yaml
apps/: french_exercises.py
data/in/: lepetitprinceexupery.txt  source_francais_facile.txt
docs/: conf.py  index.md  index.rst  license.md
french-exercises/: 0_read_data.py  1_model.py  2_decode_data.py  __init__.py
french_exercises/: __init__.py  __main__.py  decode_data.py  example.py  model.py  read_data.py
french_exercises/app/: french_exercises.py
french_exercises/core/: decode_data.py  read_data.py
notebooks/: TryModel_&_PrepareDataset.ipynb
tests/: test_decode_input.py
